# PaperRadar

./: .env.example  .gitignore  AGENTS.md  COMPLETION_SUMMARY.md  LICENSE  README.md  index.html  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  research_20260315.html  research_20260316.html  research_20260316_summary.json  research_20260317.html  research_20260317_summary.json  research_20260318.html  research_20260318_summary.json  research_20260319.html  research_20260319_summary.json  research_20260320.html  research_20260320_summary.json  research_20260321.html  research_20260321_summary.json  research_20260322.html  research_20260322_summary.json  research_20260323.html  research_20260323_summary.json  research_20260324.html  research_20260324_summary.json  research_20260325.html  research_20260325_summary.json  research_20260326_summary.json  research_20260327.html  research_20260327_summary.json  research_20260328.html  research_20260328_summary.json  research_20260329.html  research_20260329_summary.json  (+267 more)
config/: config.yaml
data/: papers.duckdb  radar_data.duckdb  radar_data.duckdb.wal  search_index.db
docs/: COLLECTORS.md  SETUP.md  analytics.html  data-quality-plan.md
mcp_server/: tools.py
paperradar/: __init__.py  analyzer.py  browser_collector.py  collector.py  config_loader.py  date_storage.py  exceptions.py  logger.py  models.py  nl_query.py  quality_report.py  raw_logger.py  reporter.py  resilience.py  search_index.py  storage.py
radar/: __init__.py
reports/: index.html  research_20260514.html  research_20260515.html  (+188 more)
(+975 files in other folders)
